--- a/public/css/bucket.css
+++ b/public/css/bucket.css
@@ -1,14 +1,19 @@
-li{
+#list>li{
+  background-color: #feec23;
   list-style: none;
-  border: 1px solid #000;
-  width: 60%;
+  border: 1px solid #feec23;
+  width: 75%;
   padding: 20px;
+  border-radius: 5px;
 }
 .show,.edit,.complete{
   float: right;
 }
 .button{
   height: 20px;
+}
+.button>button{
+  border-radius: 5px;
 }
 .delete{
   float: right;
@@ -23,7 +28,30 @@ li{
 }
 #active, #complete{
   height: 46px;
+  width: 80px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
 }
 hr{
-  margin-top: 5px;
+  height: 10px;
+  margin-top: 0px;
+}
+button[type=button]:hover{
+  background-color: #fa8a15;
+  border-color: #fa8a15;
+}
+button[type=button]:active{
+  background-color: #fa8a15;
+  border-color: #fa8a15;
+}
+
+button[type=button]{
+  margin-right: 3px;
+  color: #fff;
+  background-color: #fa8a15;
+  border-style: none;
+}
+#switch{
+  margin-top: 30px;
+  margin-left: 10px;
 }
