--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -4,18 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>new bucketList</title>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-1.10.2.js"></script> -->
+    <script src="/js/vendor/jquery-1.10.2.min.js"></script>
     <script src="/js/bucket.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="/js/nav.js"></script>
+    <script src="/js/vendor/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="/css/bucket.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/modal.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
 
-  </head>
-    <body>
-        <div id="else-container">
+</head>
+
+<body>
+    <div id="else-container">
         <header>
             <nav id="navupdown" class="navbar navbar-transparent navbar-fixed-top" role="navigation">
                 <div class="container">
@@ -52,38 +55,36 @@
 
         <div id="content-wrapper">
             <div id="main">
-      <div id="switch">
-        <button type="button" name="active" id="active">진행중</button>
-        <button type="button" name="completed" id="complete">완료</button>
-      </div>
-      <hr>
-      <button type="button" name="append" id="append" class="btn btn-info btn-lg" data-toggle="modal" data-target="#inputModal">목록 추가</button>
-      <div id="contentList">
-        <ul id="list">
-          <li>
-            <div class="content">
-              <button type="button" name="delete" class="delete">삭제</button>
-              <div class="info"><span id="snum">순번</span> <span id="sgoal">목표</span> <br> <span id="sdate">목표일시</span></div>
-              <div class="button">
-                <button type="button" name="show" class="show">▼내용보기</button>
-                <button type="button" name="edit" class="edit">수정</button>
-                <button type="button" name="complete" class="complete">완료</button>
-              </div>
-              <div class="desc" hidden>
-                <pre>
+                <div id="switch">
+                    <button type="button" name="active" id="active">진행중</button>
+                    <button type="button" name="completed" id="complete">완료</button>
+                </div>
+                <hr>
+                <button type="button" name="append" id="append" class="btn btn-info btn-lg" data-toggle="modal" data-target="#inputModal">목록 추가</button>
+                <div id="contentList">
+                    <ul id="list">
+                        <li>
+                            <div class="content">
+                                <button type="button" name="delete" class="delete">삭제</button>
+                                <div class="info"><span id="snum">순번</span> <span id="sgoal">목표</span>
+                                    <br> <span id="sdate">목표일시</span></div>
+                                <div class="button">
+                                    <button type="button" name="show" class="show">▼내용보기</button>
+                                    <button type="button" name="edit" class="edit">수정</button>
+                                    <button type="button" name="complete" class="complete">완료</button>
+                                </div>
+                                <div class="desc" hidden>
+                                    <pre>
 description
                 </pre>
-              </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </li>
-        </ul>
-
-
-
-      </div>
-
-    </div>
         </div>
+
         <!-- append Modal -->
     <div class="modal fade" id="inputModal" role="dialog">
       <div class="modal-dialog">
@@ -109,7 +110,7 @@ description
         </form>
       </div>
     </div>
-        <!-- Modal -->
+        <!--Edit Modal -->
         <div class="modal fade" id="editModal" role="dialog">
           <div class="modal-dialog">
 
@@ -134,8 +135,53 @@ description
             </form>
           </div>
         </div>
-        <div id="black-cover"></div>
-        <div id="bg"></div>
-    </body>
+        <!--Complete Modal -->
+        <div class="modal fade" id="compModal" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <form name="compForm" action="/edit" method="post">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" data-keyboard="true">&times;</button>
+                  <h1 class="modal-title">목표 달성</h4>
+                </div>
+                <div class="modal-body">
+                  <h3>목표에 달성하셨습니까?</h3>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" id="compOk" class="btn btn-default"  name="button">확인</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <!--Delete Modal -->
+        <div class="modal fade" id="deleModal" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <form name="deleForm" action="/delete" method="post">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" data-keyboard="true">&times;</button>
+                  <h1 class="modal-title">목표 삭제</h4>
+                </div>
+                <div class="modal-body">
+                  <h3>목표를 삭제하시겠습니까?</h3>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" id="deleOk" class="btn btn-default"  name="button">확인</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+    </div>
+    <div id="black-cover"></div>
+    <div id="bg"></div>
+</body>
 
 </html>
