--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px #2B2D42 inset !important;
+}
+
 html, body{
   height: 100%;
   min-height: 100%;
