--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -128,13 +128,12 @@
 					<div class="signup-inner">
 						<label for="addTitle"></label>
 						<input type="text" id="addTitle" class="form-control transparent modal-input span10" placeholder="내용을 입력하세요" maxlength="80">
-          </div>
+          			</div>
 				</div>
 				<div class="modal-footer">
-            <button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
-          <div id="status-area">
-          </div>
-        </div>
+					<div id="status-area"></div>
+					<button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -190,13 +189,12 @@
 					<div class="signup-inner">
 						<label for="addTitle"></label>
 						<input type="text" id="addTitle" class="form-control transparent modal-input span10" placeholder="내용을 입력하세요" maxlength="80">
-          </div>
+        			</div>
 				</div>
 				<div class="modal-footer">
-          <div id="status-area">
-            <button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
-          </div>
-        </div>
+					<div id="status-area"></div>
+					<button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
+				</div>
 			</div>
 		</div>
 	</div>
