--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -24,6 +24,7 @@
 	<!--bootstrap timepicker-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.0.0/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.2/moment-with-locales.min.js"></script>
+	<!--<script src="/vendor/moment.min.js"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.0.0/js/bootstrap-datetimepicker.min.js"></script>
 		
 	<!--FullCalendar-->
@@ -33,6 +34,7 @@
 	<link rel="stylesheet" href="/css/modal.css">
 
 	<script src='/vendor/moment.min.js'></script>
+	<script src="/vendor/moment-timezone.js"></script>
 	<script src='/vendor/jquery-ui.js'></script>
 	<script src='/vendor/fullcalendar.js'></script>
 
@@ -45,8 +47,10 @@
 		$(document).ready(function() {
 			var events = JSON.parse(<%- JSON.stringify(events) %>);
 
-			console.log(events[0]);
+			console.log(events);
 			console.log(events.length);
+
+			console.log(moment.tz(events[0].calendar_Start, "Asia/Seoul").format());
 
 			if (events) {
 				for (var renderCalendarIndex = 0; renderCalendarIndex < events.length; renderCalendarIndex++) {
@@ -228,8 +232,6 @@
 			</div>
 		</div>
 	</div>
-
-
 					
 				</div>
 		</div>
