--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -4,40 +4,31 @@
 	<!-- <meta charset = "utf-8"> -->
     <title>Calendar_month</title>
 
-	<script src="//d3js.org/d3.v3.min.js"></script>
+	<!--<script src="//d3js.org/d3.v3.min.js"></script>-->
+	<script src="/vendor/d3.min.js"></script>
 	<script src="/vendor/ejs.js"></script>
 	<link href="/css/style.css" rel="stylesheet" type="text/css">
 
+	<script src='/vendor/moment.min.js'></script>	
+	<script src='/vendor/moment-timezone.js'></script>	
 	<!--jQuery-->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
+	<script src='/vendor/jquery-1.12.1.min.js'></script>
+    <script src='/vendor/jquery-ui.js'></script>
     <script src='/js/calendar.js'></script>
-
 
 	<!-- Bootstrap-->
 	<link href = "/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="/vendor/d3.min.js"></script>
 	<script src = '/vendor/bootstrap.min.js'></script>
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel = 'stylesheet' type = 'text/less'>
 
-	<!--bootstrap timepicker-->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.0.0/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.2/moment-with-locales.min.js"></script>
-	<!--<script src="/vendor/moment.min.js"></script>-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.0.0/js/bootstrap-datetimepicker.min.js"></script>
-		
 	<!--FullCalendar-->
-
 	<link href='/css/fullcalendar.css' rel='stylesheet' type="text/css">
 	<link href='/css/fullcalendar.print.css' rel='stylesheet' media='print' type="text/css">
 	<link rel="stylesheet" href="/css/modal.css">
 
-	<script src='/vendor/moment.min.js'></script>
-	<script src="/vendor/moment-timezone.js"></script>
-	<script src='/vendor/jquery-ui.js'></script>
 	<script src='/vendor/fullcalendar.js'></script>
-
 	<script src = '/vendor/modal.js'></script>
 	<link href='/css/modals.less' rel='stylesheet' type='text/css'>
 
@@ -46,21 +37,15 @@
 	<script type='text/javascript'>
 		$(document).ready(function() {
 			var events = JSON.parse(<%- JSON.stringify(events) %>);
-
-			console.log(events);
-			console.log(events.length);
-
 			if (events) {
-				console.log(moment.tz(events[0].calendar_Start, "Asia/Seoul").format());
 				for (var renderCalendarIndex = 0; renderCalendarIndex < events.length; renderCalendarIndex++) {
 					var renderEvent = {
 						title : events[renderCalendarIndex].calendar_Title,
-						start : events[renderCalendarIndex].calendar_Start,
-						end : events[renderCalendarIndex].calendar_End,
+						start : moment.tz(events[renderCalendarIndex].calendar_Start, "Asia/Seoul").format(),
+						end : moment.tz(events[renderCalendarIndex].calendar_End, "Asia/Seoul").format(),
 						allDay : events[renderCalendarIndex].calendar_AllDay,
 						_id : events[renderCalendarIndex].calendar_Id
 					}
-
 					$('#calendar').fullCalendar('renderEvent', renderEvent, 'stick');
 				}
 			}
@@ -68,8 +53,6 @@
 	</script>
 </head>
 <body>
-
-
     <div id="else-container">
       <header>
           <nav id="navupdown" class="navbar navbar-transparent navbar-fixed-top" role="navigation">
@@ -131,12 +114,13 @@
 					<div class="signup-inner">
 						<label for="addTitle"></label>
 						<input type="text" id="addTitle" class="form-control transparent modal-input span10" placeholder="내용을 입력하세요" maxlength="80">
-          			</div>
+          </div>
 				</div>
 				<div class="modal-footer">
-					<div id="status-area"></div>
-					<button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
-				</div>
+          <div id="status-area">
+            <button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
+          </div>
+        </div>
 			</div>
 		</div>
 	</div>
@@ -192,12 +176,13 @@
 					<div class="signup-inner">
 						<label for="addTitle"></label>
 						<input type="text" id="addTitle" class="form-control transparent modal-input span10" placeholder="내용을 입력하세요" maxlength="80">
-        			</div>
+          </div>
 				</div>
 				<div class="modal-footer">
-					<div id="status-area"></div>
-					<button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
-				</div>
+          <div id="status-area">
+            <button type = "button" class="btn btn-primary" data-dismiss="modal" id="add">추가</button>
+          </div>
+        </div>
 			</div>
 		</div>
 	</div>
@@ -231,12 +216,11 @@
 			</div>
 		</div>
 	</div>
-					
 				</div>
 		</div>
   </div>
-
 	</div>
+
   <div id="black-cover"></div>
   <div id="bg"></div>
 </body>
