--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -5,12 +5,12 @@
     <title>Calendar_month</title>
 
 	<!--<script src="//d3js.org/d3.v3.min.js"></script>-->
-	<script src="/vendor/d3.min.js"></script>
+	<script src="//d3js.org/d3.v3.min.js"></script>
 	<script src="/vendor/ejs.js"></script>
 	<link href="/css/style.css" rel="stylesheet" type="text/css">
 
-	<script src='/vendor/moment.min.js'></script>	
-	<script src='/vendor/moment-timezone.js'></script>	
+	<script src='/vendor/moment.min.js'></script>
+	<script src='/vendor/moment-timezone.js'></script>
 	<!--jQuery-->
 	<script src='/vendor/jquery-1.12.1.min.js'></script>
     <script src='/vendor/jquery-ui.js'></script>
