--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,8 @@
 .form-control.transparent{
   background-color: rgba(255, 255, 255, 0.43);
-  border: 1px solid rgba(238, 238, 238, 0);
-  border-bottom-color: rgba(238,238,238, 0.07);
+  /*border: 1px solid rgba(238, 238, 238, 0);*/
+  border:none;
+  /*border-bottom-color: rgba(238,238,238, 0.07);*/
   color: #000000;
   margin-bottom: 3px;
   vertical-align: middle;
@@ -109,6 +110,7 @@ body{
 }
 .input-group{
   width: 440px;
+  margin-top: 2px;
 }
 .input-group label{
   border-top-left-radius: 4px;
@@ -134,7 +136,7 @@ body{
     cursor: default;
     float:left;
     background-color: rgba(255, 255, 255, 0.5);
-    border: 1px solid rgba(238, 238, 238, 0);
+    /*border: 1px solid rgba(238, 238, 238, 0);*/
     color: #FDFCFD;
     /*border-bottom-color: rgba(238,238,238, 0.07);*/
     /*box-shadow: inset 0 5px 10px rgba(0,0,0,.075);*/
@@ -184,7 +186,7 @@ body{
 
 .form-control {
     background-color: #FFFFFF;
-    border: 1px solid #E3E3E3;
+    /*border: 1px solid #E3E3E3;*/
     border-radius: 4px;
     box-shadow: none;
     color: #444444;
